| Summary: | ASTERISK-28538: chan_pjsip: Deadlock on fax detection | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | fax pjsip |
| Date Opened: | 2019-09-16 08:42:42 | Date Closed: | 2019-09-18 07:42:11 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 13.29.0 16.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When fax detection is enabled on a PJSIP endpoint and an outbound call is placed if an 1100Hz tone is detected on the outbound leg and a redirect to the fax extension happens a deadlock will occur. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2019-09-18 07:42:12.620-0500 Change 12876 merged by Friendly Automation: chan_pjsip: Relock correct channel during "fax" redirect. [https://gerrit.asterisk.org/c/asterisk/+/12876|https://gerrit.asterisk.org/c/asterisk/+/12876] By: Friendly Automation (friendly-automation) 2019-09-18 07:47:14.209-0500 Change 12878 merged by Friendly Automation: chan_pjsip: Relock correct channel during "fax" redirect. [https://gerrit.asterisk.org/c/asterisk/+/12878|https://gerrit.asterisk.org/c/asterisk/+/12878] By: Friendly Automation (friendly-automation) 2019-09-18 15:15:00.988-0500 Change 12879 merged by Joshua Colp: chan_pjsip: Relock correct channel during "fax" redirect. [https://gerrit.asterisk.org/c/asterisk/+/12879|https://gerrit.asterisk.org/c/asterisk/+/12879] By: Friendly Automation (friendly-automation) 2019-09-18 15:15:13.469-0500 Change 12880 merged by Joshua Colp: chan_pjsip: Relock correct channel during "fax" redirect. [https://gerrit.asterisk.org/c/asterisk/+/12880|https://gerrit.asterisk.org/c/asterisk/+/12880] By: Friendly Automation (friendly-automation) 2019-09-18 15:15:34.428-0500 Change 12875 merged by Joshua Colp: chan_pjsip: Relock correct channel during "fax" redirect. [https://gerrit.asterisk.org/c/asterisk/+/12875|https://gerrit.asterisk.org/c/asterisk/+/12875] By: Friendly Automation (friendly-automation) 2019-09-18 15:15:48.305-0500 Change 12888 merged by Joshua Colp: chan_pjsip: Relock correct channel during "fax" redirect. [https://gerrit.asterisk.org/c/asterisk/+/12888|https://gerrit.asterisk.org/c/asterisk/+/12888] By: Friendly Automation (friendly-automation) 2019-09-18 15:16:03.007-0500 Change 12889 merged by Joshua Colp: chan_pjsip: Relock correct channel during "fax" redirect. [https://gerrit.asterisk.org/c/asterisk/+/12889|https://gerrit.asterisk.org/c/asterisk/+/12889] By: Friendly Automation (friendly-automation) 2019-09-18 15:16:23.484-0500 Change 12887 merged by Joshua Colp: chan_pjsip: Relock correct channel during "fax" redirect. [https://gerrit.asterisk.org/c/asterisk/+/12887|https://gerrit.asterisk.org/c/asterisk/+/12887] By: Friendly Automation (friendly-automation) 2019-09-18 15:16:38.008-0500 Change 12877 merged by Joshua Colp: chan_pjsip: Relock correct channel during "fax" redirect. [https://gerrit.asterisk.org/c/asterisk/+/12877|https://gerrit.asterisk.org/c/asterisk/+/12877] | ||